--- a/web/css/app.css
+++ b/web/css/app.css
@@ -309,7 +309,8 @@ body {
     color: #585858;
     font-size: 12px;
     text-overflow: ellipsis;
-    overflow: hidden; }
+    overflow: hidden;
+    max-height: 1em; }
   .conversation__message-info {
     width: 54%;
     padding-left: 10px; }
