--- a/src/styles/chart.sass
+++ b/src/styles/chart.sass
@@ -83,12 +83,11 @@
     backface-visibility: hidden
     perspective: 1000px
     cursor: pointer
-    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both
+    animation: infinite shake 1.82s cubic-bezier(.36,.07,.19,.97) both
     transform: translate3d(0, 0, 0)
 
     &.show
       display: block
-
 
     @keyframes shake
       10%, 90%
