--- a/src/styles/chart.sass
+++ b/src/styles/chart.sass
@@ -56,6 +56,9 @@
     transform: translate(0, -50%)
     display: flex
     justify-content: space-between
+
+    &_message
+      padding-right: 20px
     &:last-child
       border-right: none
 
