--- a/web/css/app.css
+++ b/web/css/app.css
@@ -381,6 +381,8 @@ body {
     transform: translate(0, -50%);
     display: flex;
     justify-content: space-between; }
+    .chart__icons-container_message {
+      padding-right: 20px; }
     .chart__icons-container:last-child {
       border-right: none; }
   .chart__input-button {
