--- a/web/css/app.css
+++ b/web/css/app.css
@@ -615,3 +615,26 @@ body {
       background-image: url("../images/add_video.png"); }
     .conver-menu__icon_add-user {
       background-image: url("../images/add_user.png"); }
+
+.slider {
+  overflow: hidden;
+  width: 600px;
+  height: 300px;
+  margin: 0 auto; }
+  .slider figure {
+    position: relative;
+    margin: 0;
+    left: 0;
+    text-align: left;
+    font-size: 0; }
+    .slider figure img {
+      width: 600px;
+      max-height: 100%;
+      float: left; }
+    .slider figure div {
+      width: 600px;
+      height: 300px;
+      background-size: cover;
+      background-position: center;
+      max-height: 100%;
+      float: left; }
