--- a/src/styles/content.sass
+++ b/src/styles/content.sass
@@ -30,7 +30,9 @@
       width: 30%
   &__text-container
     position: relative
-    width: calc(100% - 470px)
+    width: calc(100% - 270px)
     height: calc(100vh - 74px)
     @media screen and (max-width: $tablet-width)
       width: 70%
+
+  &__router-outlet
