--- a/web/css/app.css
+++ b/web/css/app.css
@@ -157,7 +157,7 @@ body {
         width: 30%; } }
   .content__text-container {
     position: relative;
-    width: calc(100% - 470px);
+    width: calc(100% - 270px);
     height: calc(100vh - 74px); }
     @media screen and (max-width: 1024px) {
       .content__text-container {
@@ -638,3 +638,25 @@ body {
       background-position: center;
       max-height: 100%;
       float: left; }
+
+.albums {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between; }
+  .albums__tumb {
+    width: 270px;
+    height: 170px;
+    margin-top: 20px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column-reverse; }
+  .albums__tumb-text {
+    color: white;
+    text-align: center;
+    padding: 0 10px; }
+
+.router-outlet {
+  width: 100%;
+  display: flex; }
