--- a/src/styles/albums.sass
+++ b/src/styles/albums.sass
@@ -2,11 +2,13 @@
   display: flex
   flex-flow: row wrap
   justify-content: space-between
+  width: 100%
+  padding: 20px
 
   &__tumb
+    margin: 15px
     width: 270px
     height: 170px
-    margin-top: 20px
     background-size: cover
     background-position: center
     background-repeat: no-repeat
