--- a/src/styles/slider.sass
+++ b/src/styles/slider.sass
@@ -22,10 +22,12 @@
     div
       width: 900px
       height: 450px
-      background-size: cover
+      background-size: contain
       background-position: center
+      background-repeat: no-repeat
       max-height: 100%
       float: left
+
 
   &__slider-controls
     position: absolute
