file attach to chat

--- a/src/styles/chart.sass
+++ b/src/styles/chart.sass
@@ -104,3 +104,10 @@
 
       40%, 60%
         transform: translate3d(4px, 0, 0)
+
+  &__file-upload
+    width: 50%
+    float: left
+
+  &__docs-select
+    float: left
