--- a/src/styles/chart-message.sass
+++ b/src/styles/chart-message.sass
@@ -137,6 +137,10 @@
     width: 50px
     height: 70px
 
+    img
+      border-radius: 50%
+      max-width: 100%
+
     &.active
       background: white
       padding: 7px 10px 0 10px
