--- a/web/css/app.css
+++ b/web/css/app.css
@@ -550,6 +550,9 @@ body {
   .chart-message__avatar-content {
     width: 50px;
     height: 70px; }
+    .chart-message__avatar-content img {
+      border-radius: 50%;
+      max-width: 100%; }
     .chart-message__avatar-content.active {
       background: white;
       padding: 7px 10px 0 10px;
