message send form
added logo for

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -354,6 +354,8 @@ body {
     display: flex;
     height: 37px;
     width: calc(100% - 40px); }
+  .chart__form-avatar {
+    border-radius: 50%; }
   .chart__input {
     position: relative;
     width: 100%; }
