--- a/src/styles/chart.sass
+++ b/src/styles/chart.sass
@@ -20,6 +20,8 @@
     display: flex
     height: 37px
     width: calc(100% - 40px)
+  &__form-avatar
+    border-radius: 50%
   &__input
     position: relative
     width: 100%
